--- a/prompts/0.md
+++ b/prompts/0.md
@@ -8,8 +8,11 @@ Scaffold an Expo-first AI Journaling app repo that matches the attached architec
 ## Constraints:
 - Use Expo + TypeScript + expo-router.
 - Keep dependencies minimal.
-- Include an in-app “mock AI mode” so the UI works before backend is wired.
-- Store journaling sessions locally (SQLite) for MVP; add stubs for remote sync.
+- Include an in-app “mock AI mode” (Settings toggle) so the UI works before backend is wired.
+- Cloud-first: store all journaling data in Supabase Postgres; local storage only for short-lived drafts.
+- Require sign-in from day one (Supabase Auth).
+- Store both raw journal text and derived summaries.
+- All source code must live under `src/` (including routes).
 - Add AGENTS.md, docs/architecture.md, and docs/prompts-runtime.md.
 - Create a clean folder structure that supports parallel development without file conflicts.
 
